Implement Collection#empty?
Add Appraisal gem for cross-dependency testing.

Current spec status:
- ActiveRecord 4: 178 examples, 0 failures in 0.19178 seconds.
- Mongoid 4: 178 examples, 0 failures in 0.20564 seconds.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: ruby
 rvm:
-- 2.1.2
+- 2.2.0
 gemfile:
 - Gemfile
-- gemfiles/active_record4.gemfile
-- gemfiles/mongoid4.gemfile
+- gemfiles/activerecord_4_sqlite.gemfile
+- gemfiles/mongoid_4.gemfile
 services:
 - mongodb
