Implement #assign_record_attributes.
Current spec status:
- Core: 128 examples, 0 failures in 0.11836 seconds.
- ActiveRecord 4-SQLite: 244 examples, 0 failures in 0.29069 seconds.
- Mongoid 4: 244 examples, 0 failures in 0.30892 seconds.

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
-# Local configuration
-.rspec
-.ruby-gemset
-.ruby-version
+# Ignore local configuration files.
+/.rspec
+/.ruby-gemset
+/.ruby-version
 
-# Local scripting
+# Ignore local scripting
 bin/spec.*
 
-# OS-specific files
-.DS_Store
-
-# Documentation
+# Ignore generated documentation.
 /doc
 .yardoc
 
-# compiled gem files
+# Ignore compiled gem files.
 *.gem
 .bundle
 Gemfile.lock
 gemfiles/*.gemfile.lock
+
+# Ignore development documentation.
+DEVELOPMENT.md
